--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <button class="dropbtn">Menú</button>
           <div class="dropdown-content">
             <a href="http://127.0.0.1:5500/index.html">Inicio Api</a>
-            <a href="http://127.0.0.1:5500/Api_cats/index.html">Cats Api</a>
-            <a href="http://127.0.0.1:5500/Api_wathsapp/index.html">WhatsApp Api</a>
-            <a href="#">Contacto</a>
+            <a href="http://127.0.0.1:5500/Api_cats/index.html">Api Cats</a>
+            <a href="http://127.0.0.1:5500/Api_wathsapp/index.html">Api wathsapp</a>
+            <a href="#">Api con formulario</a>
           </div>  
         </div>   
     </nav>
