--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Api cats</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div id="content">
         <h1>Hello World</h1>
          
-        <h6> <img id="img1" src="../img/atom-io-portal.png" alt="">Desarrollo web</h6>
+        <h6> <img id="img1" src="img/atom-io-portal.png" alt="">Desarrollo web</h6>
       
     </div>
     <nav>
@@ -73,13 +73,13 @@
                 Fuente →
             </strong>
         </p>
-        <h4><a href="https://www.sydle.com/es/blog/api-6214f68876950e47761c40e7"><img src="../img/web.png" alt="img">SYDDLE</a></h4>
+        <h4><a href="https://www.sydle.com/es/blog/api-6214f68876950e47761c40e7"><img src="img/web.png" alt="img">SYDDLE</a></h4>
         <p>            <strong>
                 La Api mostrada en la parte de abajo, son una serie de fotos de gatitos, Apis publicas para el desarrollo libre, disponible en Github, abajo el enlace:
             </strong>
         </p>
 
-    <a href="https://github.com/public-api-lists/public-api-lists"><img src="../img/github.svg" alt=""><strong>Github</strong></a>
+    <a href="https://github.com/public-api-lists/public-api-lists"><img src="img/github.svg" alt=""><strong>Github</strong></a>
 
     <div id="content2">
     <img id="img2" alt="aleatorio">
